--- a/notebooks_blast/blast.ipynb
+++ b/notebooks_blast/blast.ipynb
@@ -20,6 +20,8 @@
     }
    ],
    "source": [
+    "#Creditos para o grupo 5\n",
+    "\n",
     "from Bio import SeqIO\n",
     "from Bio.Blast import NCBIWWW\n",
     "\n",
