--- a/notebooks_blast/uniprot.ipynb
+++ b/notebooks_blast/uniprot.ipynb
@@ -21,6 +21,8 @@
     }
    ],
    "source": [
+    "# Creditos para o grupo 5\n",
+    "\n",
     "from Bio import Entrez\n",
     "from Bio import SeqIO\n",
     "\n",
